Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.6.0
-
None
-
Windows 7 64bit Japanese
Description
When I try to build QtWebEngine in Japanese OS, I got the following error.
Is there any workaround?
Maybe I need to switch to English locale.
C:\Users\shinichi\Code\qt5\qtwebengine>nmake Microsoft (R) Program Maintenance Utility Version 14.00.23506.0 Copyright (C) Microsoft Corporation. All rights reserved. cd src\ && ( if not exist Makefile C:\Users\shinichi\Code\qt5\qtbase\bin \qmake C:\Users\shinichi\Code\qt5\qtwebengine\src\src.pro -o Makefile ) && "C:\P rogram Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\nmake.exe" -f Makefile Microsoft (R) Program Maintenance Utility Version 14.00.23506.0 Copyright (C) Microsoft Corporation. All rights reserved. cd core\ && ( if not exist Makefile C:\Users\shinichi\Code\qt5\qtbase\bi n\qmake C:\Users\shinichi\Code\qt5\qtwebengine\src\core\core.pro -o Makefile ) & & "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\nmake.exe" -f Make file Microsoft (R) Program Maintenance Utility Version 14.00.23506.0 Copyright (C) Microsoft Corporation. All rights reserved. ( if not exist Makefile.core_headers C:\Users\shinichi\Code\qt5\qtbase\b in\qmake C:\Users\shinichi\Code\qt5\qtwebengine\src\core\core_headers.pro -o Mak efile.core_headers ) && "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\ BIN\nmake.exe" -f Makefile.core_headers Microsoft (R) Program Maintenance Utility Version 14.00.23506.0 Copyright (C) Microsoft Corporation. All rights reserved. "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\nmake.exe" - f Makefile.core_headers.Release all Microsoft (R) Program Maintenance Utility Version 14.00.23506.0 Copyright (C) Microsoft Corporation. All rights reserved. "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\nmake.exe" - f Makefile.core_headers.Debug all Microsoft (R) Program Maintenance Utility Version 14.00.23506.0 Copyright (C) Microsoft Corporation. All rights reserved. ( if not exist Makefile.core_gyp_generator C:\Users\shinichi\Code\qt5\qt base\bin\qmake C:\Users\shinichi\Code\qt5\qtwebengine\src\core\core_gyp_generato r.pro -o Makefile.core_gyp_generator ) && "C:\Program Files (x86)\Microsoft Visu al Studio 14.0\VC\BIN\nmake.exe" -f Makefile.core_gyp_generator Microsoft (R) Program Maintenance Utility Version 14.00.23506.0 Copyright (C) Microsoft Corporation. All rights reserved. "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\nmake.exe" - f Makefile.core_gyp_generator.Release Microsoft (R) Program Maintenance Utility Version 14.00.23506.0 Copyright (C) Microsoft Corporation. All rights reserved. ( if not exist Makefile.gyp_run C:\Users\shinichi\Code\qt5\qtbase\bin\qm ake C:\Users\shinichi\Code\qt5\qtwebengine\src\core\gyp_run.pro -o Makefile.gyp_ run ) && "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\nmake.exe" -f Makefile.gyp_run Microsoft (R) Program Maintenance Utility Version 14.00.23506.0 Copyright (C) Microsoft Corporation. All rights reserved. "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\nmake.exe" - f Makefile.gyp_run.Release all Microsoft (R) Program Maintenance Utility Version 14.00.23506.0 Copyright (C) Microsoft Corporation. All rights reserved. C:\Users\shinichi\Code\qt5\qtwebengine\src\3rdparty\ninja\ninja.exe -C C:/Users/shinichi/Code/qt5/qtwebengine/src/core/Release_x64 ninja: Entering directory `C:/Users/shinichi/Code/qt5/qtwebengine/src/core/Relea se_x64' [10/11770] CC obj\src\3rdparty\chromium\third_party\qcms\src\qcms.chain.obj FAILED: ninja -t msvc -e environment.x64 -- cl.exe /nologo /showIncludes /FC @ob j\src\3rdparty\chromium\third_party\qcms\src\qcms.chain.obj.rsp /c c:\users\shin ichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\src\chain.c /Fo obj\src\3rdparty\chromium\third_party\qcms\src\qcms.chain.obj /Fdobj\src\3rdpart y\chromium\third_party\qcms\qcms.c.pdb c:\users\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\sr c\qcms.h: error C2220: warning treated as error - no 'object' file generated c:\users\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\sr c\qcms.h: warning C4819: The file contains a character that cannot be represente d in the current code page (932). Save the file in Unicode format to prevent dat a loss [10/11770] CC obj\src\3rdparty\chromiu...party\qcms\src\qcms.transform_util.obj FAILED: ninja -t msvc -e environment.x64 -- cl.exe /nologo /showIncludes /FC @ob j\src\3rdparty\chromium\third_party\qcms\src\qcms.transform_util.obj.rsp /c c:\u sers\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\src\tr ansform_util.c /Foobj\src\3rdparty\chromium\third_party\qcms\src\qcms.transform_ util.obj /Fdobj\src\3rdparty\chromium\third_party\qcms\qcms.c.pdb c:\users\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\sr c\qcms.h: error C2220: warning treated as error - no 'object' file generated c:\users\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\sr c\qcms.h: warning C4819: The file contains a character that cannot be represente d in the current code page (932). Save the file in Unicode format to prevent dat a loss [10/11770] CC obj\src\3rdparty\chromium\third_party\qcms\src\qcms.matrix.obj FAILED: ninja -t msvc -e environment.x64 -- cl.exe /nologo /showIncludes /FC @ob j\src\3rdparty\chromium\third_party\qcms\src\qcms.matrix.obj.rsp /c c:\users\shi nichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\src\matrix.c / Foobj\src\3rdparty\chromium\third_party\qcms\src\qcms.matrix.obj /Fdobj\src\3rdp arty\chromium\third_party\qcms\qcms.c.pdb c:\users\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\sr c\qcms.h: error C2220: warning treated as error - no 'object' file generated c:\users\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\sr c\qcms.h: warning C4819: The file contains a character that cannot be represente d in the current code page (932). Save the file in Unicode format to prevent dat a loss [10/11770] CC obj\src\3rdparty\chromium\third_party\qcms\src\qcms.iccread.obj FAILED: ninja -t msvc -e environment.x64 -- cl.exe /nologo /showIncludes /FC @ob j\src\3rdparty\chromium\third_party\qcms\src\qcms.iccread.obj.rsp /c c:\users\sh inichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\src\iccread.c /Foobj\src\3rdparty\chromium\third_party\qcms\src\qcms.iccread.obj /Fdobj\src\3 rdparty\chromium\third_party\qcms\qcms.c.pdb c:\users\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\sr c\qcms.h: error C2220: warning treated as error - no 'object' file generated c:\users\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\sr c\qcms.h: warning C4819: The file contains a character that cannot be represente d in the current code page (932). Save the file in Unicode format to prevent dat a loss [10/11770] CC obj\src\3rdparty\chromiu...party\qcms\src\qcms.transform-sse2.obj FAILED: ninja -t msvc -e environment.x64 -- cl.exe /nologo /showIncludes /FC @ob j\src\3rdparty\chromium\third_party\qcms\src\qcms.transform-sse2.obj.rsp /c c:\u sers\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\src\tr ansform-sse2.c /Foobj\src\3rdparty\chromium\third_party\qcms\src\qcms.transform- sse2.obj /Fdobj\src\3rdparty\chromium\third_party\qcms\qcms.c.pdb c:\users\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\sr c\qcms.h: error C2220: warning treated as error - no 'object' file generated c:\users\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\sr c\qcms.h: warning C4819: The file contains a character that cannot be represente d in the current code page (932). Save the file in Unicode format to prevent dat a loss [10/11770] CC obj\src\3rdparty\chromiu...hird_party\qcms\src\qcms.transform.obj FAILED: ninja -t msvc -e environment.x64 -- cl.exe /nologo /showIncludes /FC @ob j\src\3rdparty\chromium\third_party\qcms\src\qcms.transform.obj.rsp /c c:\users\ shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\src\transfo rm.c /Foobj\src\3rdparty\chromium\third_party\qcms\src\qcms.transform.obj /Fdobj \src\3rdparty\chromium\third_party\qcms\qcms.c.pdb c:\users\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\sr c\qcms.h: error C2220: warning treated as error - no 'object' file generated c:\users\shinichi\code\qt5\qtwebengine\src\3rdparty\chromium\third_party\qcms\sr c\qcms.h: warning C4819: The file contains a character that cannot be represente d in the current code page (932). Save the file in Unicode format to prevent dat a loss [10/11770] CXX obj\src\3rdparty\chromi...ase\rtc_base_approved.stringencode.obj ninja: build stopped: subcommand failed. NMAKE : fatal error U1077: 'C:\Users\shinichi\Code\qt5\qtwebengine\src\3rdparty\ ninja\ninja.exe' : return code '0x1' Stop. NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio 14.0 \VC\BIN\nmake.exe"' : return code '0x2' Stop. NMAKE : fatal error U1077: '(' : return code '0x2' Stop. NMAKE : fatal error U1077: 'cd' : return code '0x2' Stop. NMAKE : fatal error U1077: 'cd' : return code '0x2' Stop.
Attachments
Issue Links
- relates to
-
COIN-126 should test Qt in non-english locale, at least CJK
-
- Need More Info
-