Fix encoding issue for Japanese Windows

MSVC 2015 has issues with the unicode single quotes in qcms.h.
Replace them with normal single quotes.

Task-number: QTBUG-51920
Change-Id: I74fe08cebdbb6b73cecd1a9f7c2256c5371881ee
Reviewed-by: Michael Brüning <michael.bruning@theqtcompany.com>